# ocli

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.opencode/plans/: test-suite.md
examples/: cli.rs  info.rs  trace.rs  verbosity.rs
src/: lib.rs
tests/: integration.rs
xtask/: Cargo.toml
