[package]
name = "ocli"
version = "0.1.2"
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]
description = "A simple, opinionated logger for command line tools"
readme = "README.md"
repository = "https://github.com/glehmann/ocli.git"
homepage = "https://github.com/glehmann/ocli/"
documentation = "https://docs.rs/ocli/latest/ocli/"
license = "MIT"
keywords = ["terminal", "log", "logger", "logging", "cli"]

[dependencies]
is-terminal = "0.4.10"
colored = "3.0.0"
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
