[package]
name = "ocli"
version = "0.3.0"
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]
description = "A simple, opinionated logger for command line tools"
readme = "README.md"
repository = "https://github.com/glehmann/ocli.git"
homepage = "https://github.com/glehmann/ocli/"
documentation = "https://docs.rs/ocli/latest/ocli/"
license = "MIT"
keywords = ["terminal", "log", "logger", "logging", "cli"]

[dependencies]
log = { version = "0.4", features = ["std"] }
termcolor = "1.4.1"

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
