[package]
name = "xtask"
version.workspace = true
edition = "2024"
authors = ["Gaëtan Lehmann <gaetan.lehmann@vates.tech>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env", "wrap_help"] }
toml_edit = "0.25.10"
xshell = "0.2"
